# image-pipeline

image-pipeline/: README.md
image-pipeline/image-pipeline/: Kustomize.yaml  docker-compose.yml
image-pipeline/image-pipeline/init-scripts/: init.sql
image-pipeline/image-pipeline/milvus-init/: Dockerfile  init_milvus_dual.py  requirements.txt
image-pipeline/image-pipeline/python-producer/: Dockerfile  producer.py  producer_enhanced.py  producer_milvus.py
image-pipeline/image-pipeline/rust-backend/: Cargo.toml  Dockerfile  insert_to_milvus.py
image-pipeline/image-pipeline/rust-backend/src/: main.rs
image-pipeline/image-pipeline/scripts/: check-all-services.sh  complete_verification.sh  diagnostic_check.sh  run-dual-embeddings.sh  run-with-milvus.sh  show-all-results.sh  show-results.sh  test-dual-endpoints.sh  test-fastapi.sh
image-pipeline/image-pipeline/search-gui/: search.html  search_client.py  serve_html.py  test_search_api.sh
image-pipeline/model-serving/: Dockerfile  endpoints.py  handlers.py  main.py  models.py  pyproject.toml
image-pipeline/model-serving/cache_token/models--timm--ViT-B-16-SigLIP/refs/: main
image-pipeline/model-serving/inference/: embeddings.py  trition_utils.py
